...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_state_population"
        tools:text="@string/hello_state" />
    <Button
        android:id="@+id/btn_addToFavorite"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_state_capital"
        android:text="@string/addToFavorite"
        android:textColor="@color/colorPrimary" />
    <Button
        android:id="@+id/btn_removeFavorite"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
...
